[package]
name = "glue"
version = "0.1.0"
authors = ["Michael Zhao <michael.zhao@arm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-bindings = { version = ">=0.2.0", features = ["fam-wrappers"] }
kvm-ioctls = { git = "https://github.com/rust-vmm/kvm-ioctls", branch = "master" }
linux-loader = { git = "https://github.com/michael2012z/linux-loader.git", branch = "support_aarch64_test" }

[dependencies.clap]
version = "2.33.0"
features = ["yaml"]

[dependencies.vm-memory]
git = "https://github.com/rust-vmm/vm-memory"
features = ["backend-mmap"]